# veo3free

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  sync_version.py  updater.py  veo3free.spec  version.py  youhou-plugin.js
.github/workflows/: build.yml
guide/: index.html  inject.js
icons/: app_icon.icns
web-src/src/: App.tsx  types.ts
web-src/src/components/: UpdateModal.tsx  UpdateStatusBar.tsx
